Update and rename README.md to README

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 Guthen's & Nogitsu's Library
 
 ## Website
-GNLib has his own [website](http://gnlib.wizzarheberg.fr) with his own [wiki](http://gnlib.wizzarheberg.fr/wiki/). 
+GNLib has his own [website](https://gnlib.mtxserv.com/) with his own [wiki](https://gnlib.mtxserv.com/wiki/). 
 
 ## Discord 
 Join our [Discord](https://discord.gg/pKA55Ak) for more informations and to get access to the wiki.
